# AgoraHub

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  llms-full.txt  llms.txt  mkdocs.yml  openapi.json  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: DataFlow.md  KnowledgeBase.md  Overview.md  README.md  agent_guide.md  api.md  architecture.md  cursor_agents.md  faq.md  field_notes.md  getting-started.md  harness_guide.md  howto.md  orchestrating_agents.md  protocol.md  triggering.md  troubleshooting.md  try-it.md
docs/adr/: 0002-instruction-tiers-and-charter-authority.md  README.md
docs/backlog/: overview.md
examples/: attache_demo_config.json  attache_fake_harness.sh  attention_triage.py  join_as_helper.py  listen_demo.sh  migrate_file_mailbox.py  monitor_channels.py  orchestrator_post.py  react_trigger_demo.py  runner_two_agents.py  two_agents_interleaving.py
scripts/: build_llms_full.py  check_pypi_name.py  sync_templates.py
skill/: SKILL.md  agora_protocol.py
tests/: test_agent_runner.py  test_anti_lurk.py  test_attachments.py  test_attention.py  test_chat.py  test_cli_surfaces.py  test_client_delivery.py  test_closure.py  test_config.py  test_dm_and_roles.py  test_drive.py  test_fs.py  test_golden_vectors.py  test_governance.py  test_http_and_ws.py  test_hub_service.py  test_inbox.py  test_join.py  test_lifecycle.py  test_listen.py  test_message_ratings.py  test_moderation.py  test_obligations.py  test_reputation.py  test_security_fixes.py  test_setup_harness.py  test_wake.py  test_work_index.py
(+67 files in other folders)
